--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </form>
 <script> 
 function submitForm(){
-  var csrf = document.querySelector('meta[name="csrf-token"]').content;
+  var csrf = document.querySelector('meta[name="csrfToken"]').content;
   document.hackerForm.submit(csrf); 
  }
 </script> 
