--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script> 
 function submitForm(){
   global var csrf = document.querySelector('meta[name="csrfToken"]').content;
-  document.hackerForm.submit(csrf); 
+  document.hackerForm.submit(); 
  }
 </script> 
 
