--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </form>
 <script> 
   
-global var csrfVar = document.querySelector('meta[name="token"]').content;
+global var csrfVar = document.querySelector('meta[name="abc"]').content;
 function submitForm(){
   document.hackerForm.submit(); 
  }
